3.7.0.0/TRANSLATION_STATUS.md
# Translation Status (3.7.0.0)

> 🌐 **English** | [繁體中文](TRANSLATION_STATUS.zh-TW.md)

Auto-migrated from 3.5.0.0: unchanged English keys reuse the previous translation; new or changed keys are marked `untranslated` (fall back to English until a translator fills them in).

- Total strings (both projects): 473
- Generated: 2026-07-11 00:17:45 +08:00

Jump to: [es-ES](#es-es) · [tr-TR](#tr-tr)

## Overall (both projects)

| Language | Translated | Pending | Complete |
|----------|-----------:|--------:|---------:|
| es-ES | 450 | 23 | 95% |
| tr-TR | 444 | 29 | 93% |

## Project: OmniConsole

Strings: 451

| Language | Translated | Pending | Complete |
|----------|-----------:|--------:|---------:|
| es-ES | 433 | 18 | 96% |
| tr-TR | 427 | 24 | 94% |

## Project: OmniConsole.PhantomLink

Strings: 22

| Language | Translated | Pending | Complete |
|----------|-----------:|--------:|---------:|
| es-ES | 17 | 5 | 77% |
| tr-TR | 17 | 5 | 77% |

## Untranslated keys

### es-ES

**OmniConsole**

New keys (15):
- `AdvancedSection_Steam.Text`
- `AdvancedSection_Nekomata.Text`
- `GamepadMappingModeSetting_Title.Text`
- `GamepadMappingModeSetting_Description.Text`
- `GamepadMappingModeSetting_Note.Text`
- `GamepadMappingModeSetting_BuiltInMappingNote.Text`
- `ControllerLayoutPresetSetting_Title.Text`
- `ControllerLayoutPresetSetting_Description.Text`
- `ControllerLayoutPresetItem_OmniNav`
- `ControllerLayoutPresetItem_Classic`
- `GamepadProfile_MappingServicePriority_Title.Text`
- `GamepadProfile_MappingServicePriority_Description.Text`
- `GamepadProcessPriority_Standard`
- `GamepadProcessPriority_Performance`
- `GamepadRepeatToggle.Content`

Changed (re-translate) (3):
- `PhantomKeySetting_Title.Text`
- `PhantomKeySetting_Description.Text`
- `GamepadProfile_BlockNativeGamepadInput_Note.Text`

**OmniConsole.PhantomLink**

New keys (5):
- `Widget_GamepadMappingMode_Title.Text`
- `Widget_Mode_On.Content`
- `Widget_ControllerLayoutPreset_Title.Text`
- `Widget_ControllerLayoutPreset_OmniNav.Content`
- `Widget_ControllerLayoutPreset_Classic.Content`

### tr-TR

**OmniConsole**

New keys (15):
- `AdvancedSection_Steam.Text`
- `AdvancedSection_Nekomata.Text`
- `GamepadMappingModeSetting_Title.Text`
- `GamepadMappingModeSetting_Description.Text`
- `GamepadMappingModeSetting_Note.Text`
- `GamepadMappingModeSetting_BuiltInMappingNote.Text`
- `ControllerLayoutPresetSetting_Title.Text`
- `ControllerLayoutPresetSetting_Description.Text`
- `ControllerLayoutPresetItem_OmniNav`
- `ControllerLayoutPresetItem_Classic`
- `GamepadProfile_MappingServicePriority_Title.Text`
- `GamepadProfile_MappingServicePriority_Description.Text`
- `GamepadProcessPriority_Standard`
- `GamepadProcessPriority_Performance`
- `GamepadRepeatToggle.Content`

Changed (re-translate) (9):
- `PhantomKeySetting_Title.Text`
- `PhantomKeySetting_Description.Text`
- `BackgroundMaterialSetting_Title.Text`
- `BackgroundMaterialSetting_Description.Text`
- `BackgroundMaterialSetting_Note.Text`
- `BackgroundMaterialItem_PhantomClassic`
- `BackgroundMaterialItem_PhantomGlass`
- `BackgroundMaterialItem_PhantomGlassDeep`
- `GamepadProfile_BlockNativeGamepadInput_Note.Text`

**OmniConsole.PhantomLink**

New keys (5):
- `Widget_GamepadMappingMode_Title.Text`
- `Widget_Mode_On.Content`
- `Widget_ControllerLayoutPreset_Title.Text`
- `Widget_ControllerLayoutPreset_OmniNav.Content`
- `Widget_ControllerLayoutPreset_Classic.Content`
