3.8.0.0/TRANSLATION_STATUS.md
# Translation Status (3.8.0.0)

> 🌐 **English** | [繁體中文](TRANSLATION_STATUS.zh-TW.md)

Auto-migrated from 3.7.1.0: unchanged English keys reuse the previous translation; new or changed keys are marked `untranslated` (fall back to English until a translator fills them in).

- Total strings (both projects): 474
- Generated: 2026-07-13 22:55:48 +08:00

Jump to: [es-ES](#es-es) · [tr-TR](#tr-tr)

## Overall (both projects)

| Language | Translated | Pending | Complete |
|----------|-----------:|--------:|---------:|
| es-ES | 447 | 27 | 94% |
| tr-TR | 470 | 4 | 99% |

## Project: OmniConsole

Strings: 452

| Language | Translated | Pending | Complete |
|----------|-----------:|--------:|---------:|
| es-ES | 430 | 22 | 95% |
| tr-TR | 448 | 4 | 99% |

## Project: OmniConsole.PhantomLink

Strings: 22

| Language | Translated | Pending | Complete |
|----------|-----------:|--------:|---------:|
| es-ES | 17 | 5 | 77% |
| tr-TR | 22 | 0 | 100% |

## Untranslated keys

### es-ES

**OmniConsole**

New keys (1):
- `ManageLanguages_OfflineNotice`

Changed (re-translate) (21):
- `AdvancedSection_Steam.Text`
- `AdvancedSection_Nekomata.Text`
- `PhantomKeySetting_Title.Text`
- `PhantomKeySetting_Description.Text`
- `GamepadMappingModeSetting_Title.Text`
- `GamepadMappingModeSetting_Description.Text`
- `GamepadMappingModeSetting_Note.Text`
- `GamepadMappingModeSetting_BuiltInMappingNote.Text`
- `ControllerLayoutPresetSetting_Title.Text`
- `ControllerLayoutPresetSetting_Description.Text`
- `ControllerLayoutPresetItem_OmniNav`
- `ControllerLayoutPresetItem_Classic`
- `GamepadProfile_BlockNativeGamepadInput_Note.Text`
- `GamepadProfile_MappingServicePriority_Title.Text`
- `GamepadProfile_MappingServicePriority_Description.Text`
- `GamepadProcessPriority_Standard`
- `GamepadProcessPriority_Performance`
- `GamepadRepeatToggle.Content`
- `GamepadMappingClearAllConfirmBody`
- `GamepadMappingEmptyConfirmBody`
- `GamepadMappingEmptyRemoveBody`

**OmniConsole.PhantomLink**

Changed (re-translate) (5):
- `Widget_GamepadMappingMode_Title.Text`
- `Widget_Mode_On.Content`
- `Widget_ControllerLayoutPreset_Title.Text`
- `Widget_ControllerLayoutPreset_OmniNav.Content`
- `Widget_ControllerLayoutPreset_Classic.Content`

### tr-TR

**OmniConsole**

New keys (1):
- `ManageLanguages_OfflineNotice`

Changed (re-translate) (3):
- `GamepadMappingClearAllConfirmBody`
- `GamepadMappingEmptyConfirmBody`
- `GamepadMappingEmptyRemoveBody`
